# DevTools

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts
src/: App.vue  menus.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/assets/: administrative_division_code.csv
src-tauri/src/: error.rs  lib.rs
src-tauri/src/utils/: administrative_division.rs  base64util.rs  common.rs  datetime.rs  hashes.rs  hmac_util.rs  id_no.rs  mod.rs  qr_code.rs  url_utils.rs
src/components/: InputWithCopy.vue  MarkDownRender.vue
src/components/base/: TButton.vue
src/enums/: HashType.ts
src/style/: common.less  variables.less
src/style/base/: button.less
src/utils/: compress.ts  copyToClipboard.ts  languageDetection.ts  logger.ts  notification.ts
src/views/: Base64.vue  HashGenerator.vue  HmacGenerator.vue  Nothing.vue  Test.vue  TestMarkdown.vue
src/views/CodeFormatter/: Index.vue
src/views/IdNo/: Index.vue
src/views/Markdown/: PreviewMarkdown.vue
src/views/QrCode/: Index.vue
src/views/RegExp/: Index.vue
src/views/Unicode/: Index.vue
src/views/Url/: UrlEncoding.vue  UrlParser.vue
