[package]
name = "DevTools"
version = "0.1.0"
description = "开发工具集"
authors = ["Ethan Wang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14.1"
image = { version = "0.25.4", features = ["png"] }
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4.22"
csv = "1.3.0"
rand = "0.8.5"
chrono = "0.4.38"
anyhow = "1.0.93"
cached = "0.54.0"
tauri-plugin-fs = "2"
md-5 = "0.10.6"
md2 = "0.10.2"
md4 = "0.10.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
hmac = "0.12.1"

[dev-dependencies]
mockall = "0.13.0"
mockall_double = "0.3.1"
test-case = "3.3.1"
